kubernetes/page-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-db
  name: page-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: page-db
    spec:
      containers:
        - image: mongo:latest
          name: personal-web-page-dev-db
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: webpage-db-data
      restartPolicy: Always
      volumes:
        - name: webpage-db-data
          persistentVolumeClaim:
            claimName: webpage-db-data
status: {}
