kubernetes/page-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-server
  name: page-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: page-server
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
            - name: TOKEN_SECRET
              value: "123"
          image: chmaikos/devops_hua:latest
          name: personal-webpage-dev-server
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/build/client/images
              name: client-images
      restartPolicy: Always
      volumes:
        - name: client-images
          persistentVolumeClaim:
            claimName: client-images
status: {}
