kubernetes/aio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-db
  name: page-db
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend-network: "true"
        io.kompose.service: page-db
    spec:
      containers:
        - image: mongo:latest
          name: personal-web-page-dev-db
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: webpage-db-data
      restartPolicy: Always
      volumes:
        - name: webpage-db-data
          persistentVolumeClaim:
            claimName: webpage-db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-db
  name: page-db
  namespace: devops
spec:
  selector:
    io.kompose.service: page-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-server
  name: page-server
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend-network: "true"
        io.kompose.service: page-server
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
            - name: TOKEN_SECRET
              value: "123"
          image: chmaikos/devops_hua:latest
          name: personal-webpage-dev-server
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/build/client/images
              name: client-images
      restartPolicy: Always
      volumes:
        - name: client-images
          persistentVolumeClaim:
            claimName: client-images
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-server
  name: page-server
  namespace: devops
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: page-server
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-server-ingress
  namespace: devops
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: devops.red-net.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: page-server
            port:
              number: 3000
  tls:
  - hosts:
    - devops.red-net.gr
    secretName: devops-red-net-gr-cert
