kubernetes/app-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: page-db
  name: page-db
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend-network: "true"
        io.kompose.service: page-db
    spec:
      containers:
        - image: mongo:latest
          name: database
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: webpage-db-data
      restartPolicy: Always
      volumes:
        - name: webpage-db-data
          persistentVolumeClaim:
            claimName: webpage-db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-db
  name: page-db
  namespace: devops
spec:
  selector:
    io.kompose.service: page-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: page-server
  name: page-server
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: page-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend-network: "true"
        io.kompose.service: page-server
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: app-env-vars
          image: chmaikos/devops_hua:latest
          imagePullPolicy: Always
          name: backend
          resources: {}
      restartPolicy: Always
      volumes:
        - name: static-client
          persistentVolumeClaim:
            claimName: static-client
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.prod.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: page-server
  name: page-server
  namespace: devops
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: page-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-static
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      containers:
      - name: nginx-static
        image: nginx:alpine
        volumeMounts:
        - name: static-client
          mountPath: /usr/share/nginx/html
      volumes:
      - name: static-client
        persistentVolumeClaim:
          claimName: static-client
---
# nginx-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-service
  namespace: devops
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-static
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-server-ingress
  namespace: devops
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: devops.red-net.gr
    http:
      paths:
      # For /api, forward to page-server
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: page-server
            port:
              number: 3000
      # For everything else, serve static files
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-static-service
            port:
              number: 80
  tls:
  - hosts:
    - devops.red-net.gr
    secretName: devops-red-net-gr-cert
